# altv-scratch-module

./: .gitmodules  CMakeLists.txt  README.md  build.bat
src/: main.cpp  main.h  resource.cpp  resource.h  runtime.cpp  runtime.h
vendors/scrape/: scrapec.py
vendors/scrape/include/: scrape.h
